Resolve error after merge