@@ -3,15 +3,16 @@ package com.mockproject.service;
 import com.mockproject.dto.LocationDTO;
 import com.mockproject.entity.Location;
 import com.mockproject.mapper.LocationMapper;
-import com.mockproject.dto.LocationDTO;
-import com.mockproject.mapper.LocationMapper;
+
 import com.mockproject.repository.LocationRepository;
 import com.mockproject.service.interfaces.ILocationService;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.webjars.NotFoundException;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -21,18 +22,19 @@ public class LocationService implements ILocationService {
     private final LocationRepository locationRepo;
 
     @Override
-    public List<LocationDTO> getAllLocation(boolean status) {
-        return locationRepo.findAllByStatus(status).stream().map(LocationMapper.INSTANCE::toDTO).collect(Collectors.toList());
+    public List<LocationDTO> listAllTrue() {
+        return locationRepo.findByStatus(true).stream().map(LocationMapper.INSTANCE::toDTO).toList();
+    }
 
     @Override
-    public List<LocationDTO> listAllTrue() {
-        return repository.findByStatus(true).stream().map(LocationMapper.INSTANCE::toDTO).toList();
+    public List<LocationDTO> getAllLocation(boolean status) {
+        return locationRepo.findAllByStatus(status).stream().map(LocationMapper.INSTANCE::toDTO).collect(Collectors.toList());
     }
-    }
+
 
     @Override
     public LocationDTO getLocationById(boolean status, long id) {
-        Location location = locationRepo.findByStatusAndId(status, id).orElseThrow(() -> new NotFoundException("Location not found with id: "+ id));
+        Location location = locationRepo.findByStatusAndId(status, id).orElseThrow(() -> new NotFoundException("Location not found with id: " + id));
         return LocationMapper.INSTANCE.toDTO(location);
     }
 }
